--- a/po/piserver.pot
+++ b/po/piserver.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-08 09:32+0000\n"
+"POT-Creation-Date: 2017-09-08 10:52+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,11 +26,19 @@ msgid "Error downloading repository information: "
 msgstr ""
 
 #: ../src/abstractadddistro.cpp:165
-msgid "Insufficient disk space. Available: "
+msgid "Insufficient disk space. "
+msgstr ""
+
+#: ../src/abstractadddistro.cpp:165
+msgid " MB available."
 msgstr ""
 
 #: ../src/abstractadddistro.cpp:186
-msgid "There is already an OS by the name '"
+msgid "There is already an OS called '"
+msgstr ""
+
+#: ../src/abstractadddistro.cpp:186
+msgid "' installed."
 msgstr ""
 
 #: ../src/abstractadddistro.cpp:190
@@ -44,7 +52,7 @@ msgstr ""
 
 #: ../src/abstractadddistro.cpp:243
 #, c-format
-msgid "%.1f mbit/sec"
+msgid "%.1f Mbit/sec"
 msgstr ""
 
 #: ../src/abstractadddistro.cpp:248
@@ -84,21 +92,21 @@ msgid ""
 msgstr ""
 
 #: ../src/abstractadduser.cpp:114
-msgid ""
-"The following user names already exist on the system (or on this computer): "
+msgid "The following user names already exist on the system or this computer: "
 msgstr ""
 
 #: ../src/installwizard.cpp:45
 msgid ""
-"No network interfaces with IPv4 address detected. Check your network settings"
+"No network interfaces with IPv4 address detected. Check your network "
+"settings."
 msgstr ""
 
 #: ../src/installwizard.cpp:96
-msgid "Installing LDAP, NFS and (proxy) DHCP server software"
+msgid "Installing LDAP, NFS and DHCP server software"
 msgstr ""
 
-#: ../src/main.cpp:23
-msgid "This program must be run as root. Try starting it with sudo"
+#: ../src/main.cpp:28
+msgid "This program must be run as root. Try starting it with sudo."
 msgstr ""
 
 #: ../src/mainwindow.cpp:189
@@ -107,13 +115,13 @@ msgstr ""
 
 #: ../src/mainwindow.cpp:226
 msgid ""
-"Are you sure you want to delete this user and the files in its home "
+"Are you sure you want to delete this user and the files in their home "
 "directory?"
 msgstr ""
 
 #. Shouldn't happen if user made it through the first-use wizard
 #: ../src/mainwindow.cpp:251
-msgid "Please install a Linux distribution first under 'software'"
+msgid "Please install a Linux distribution first under 'Software'"
 msgstr ""
 
 #: ../src/mainwindow.cpp:314
