--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-08 10:52+0000\n"
-"PO-Revision-Date: 2017-09-08 10:52+0000\n"
+"POT-Creation-Date: 2017-09-22 16:42+0100\n"
+"PO-Revision-Date: 2017-09-22 16:45+0100\n"
 "Last-Translator: Simon Long <simon@raspberrypi.org>\n"
 "Language-Team: English (British)\n"
 "Language: en_GB\n"
@@ -116,11 +116,11 @@ msgstr "Installing LDAP, NFS and DHCP server software"
 msgid "This program must be run as root. Try starting it with sudo."
 msgstr "This program must be run as root. Try starting it with sudo."
 
-#: ../src/mainwindow.cpp:189
+#: ../src/mainwindow.cpp:190
 msgid "Normal users"
 msgstr "Normal users"
 
-#: ../src/mainwindow.cpp:226
+#: ../src/mainwindow.cpp:227
 msgid ""
 "Are you sure you want to delete this user and the files in their home "
 "directory?"
@@ -129,19 +129,45 @@ msgstr ""
 "directory?"
 
 #. Shouldn't happen if user made it through the first-use wizard
-#: ../src/mainwindow.cpp:251
+#: ../src/mainwindow.cpp:252
 msgid "Please install a Linux distribution first under 'Software'"
 msgstr "Please install a Linux distribution first under 'Software'"
 
-#: ../src/mainwindow.cpp:314
+#: ../src/mainwindow.cpp:315
 msgid "Are you sure you want to delete this operating system?"
 msgstr "Are you sure you want to delete this operating system?"
 
-#: ../src/mainwindow.cpp:398
+#: ../src/mainwindow.cpp:399
 msgid "Update available"
 msgstr "Update available"
 
-#: ../src/mainwindow.cpp:459
+#: ../src/mainwindow.cpp:464
+msgid ""
+"Error starting odhcploc.\n"
+"Skipped checking if other DHCP servers are active."
+msgstr ""
+"Error starting odhcploc.\n"
+"Skipped checking if other DHCP servers are active."
+
+#: ../src/mainwindow.cpp:473
+msgid ""
+"odhcploc returned error code.\n"
+"Skipped checking if other DHCP servers are active."
+msgstr ""
+"odhcploc returned error code.\n"
+"Skipped checking if other DHCP servers are active."
+
+#: ../src/mainwindow.cpp:486
+msgid ""
+"There is already another DHCP server (%1) active in your network.\n"
+"It is not safe to have multiple DHCP servers running.\n"
+"Your settings have not been saved."
+msgstr ""
+"There is already another DHCP server (%1) active in your network.\n"
+"It is not safe to have multiple DHCP servers running.\n"
+"Your settings have not been saved."
+
+#: ../src/mainwindow.cpp:504
 msgid "Settings saved"
 msgstr "Settings saved"
 
