Update repo URL; tweak to DHCP warning message.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -169,6 +169,14 @@ msgid ""
 "\n"
 "Are you sure you want to activate standalone DHCP server mode?"
 msgstr ""
+"There is already another DHCP server (%1) active on your network.\n"
+"Having more than one DHCP server assigning IP addresses"
+"can result in serious problems, such as the same address being "
+"assigned to multiple clients.\n"
+"Please read the <a href=\"https://github.com/raspberrypi/piserver/wiki"
+"\">documentation</a> before proceeding.\n"
+"\n"
+"Are you sure you want to activate standalone DHCP server mode?"
 
 #: ../src/mainwindow.cpp:516
 msgid "Settings saved"
@@ -661,11 +669,3 @@ msgstr ""
 msgid "Server for diskless Pi 3"
 msgstr "Server for diskless Pi 3"
 
-#~ msgid ""
-#~ "There is already another DHCP server (%1) active in your network.\n"
-#~ "It is not safe to have multiple DHCP servers running.\n"
-#~ "Your settings have not been saved."
-#~ msgstr ""
-#~ "There is already another DHCP server (%1) active in your network.\n"
-#~ "It is not safe to have multiple DHCP servers running.\n"
-#~ "Your settings have not been saved."
