--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+piserver (0.7.3) buster; urgency=medium
+
+  * Fix GDateTime reference counting 
+
+ -- Floris Bos <bos@je-eigen-domein.nl>  Sat, 03 Jul 2021 01:09:49 +0200
+
 piserver (0.7.2) buster; urgency=medium
 
   * Drop file system capabilities while running chroot shell
