--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+piserver (0.7.4) buster; urgency=medium
+
+  * Update convert script for bullseye 
+
+ -- Floris Bos <bos@je-eigen-domein.nl>  Tue, 23 Nov 2021 20:55:19 +0100
+
 piserver (0.7.3) buster; urgency=medium
 
   * Fix GDateTime reference counting 
