--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+piserver (0.7.5) buster; urgency=medium
+
+  * Fix "Cannot use erase() with null" error when using
+    non-ad external LDAP server
+
+ -- Floris Bos <bos@je-eigen-domein.nl>  Sat, 10 Sep 2022 23:42:33 +0200
+
 piserver (0.7.4) buster; urgency=medium
 
   * Update convert script for bullseye 
