--- a/po/ko.po
+++ b/po/ko.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-22 19:21+0200\n"
-"PO-Revision-Date: 2023-05-28 16:42+0900\n"
+"PO-Revision-Date: 2023-05-28 16:52+0900\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,7 +273,7 @@ msgid ""
 msgstr ""
 "<big>소프트웨어 설치 중</big>\n"
 "\n"
-"소프트웨어가 설치도리 것입니다.\n"
+"소프트웨어가 설치될 것입니다.\n"
 "\n"
 "\n"
 "\n"
@@ -330,7 +330,7 @@ msgid ""
 "Select the operating system to run on these Pis from the drop-down box.\n"
 msgstr ""
 "사용하려는 모든 라즈베리 파이가 네트워크에서 부팅되도록 설정됐는지,\n"
-"이더넷이 연결되고 전원지 켜졌는지 확인하십시오. 아래 목록에 나타납니다.\n"
+"이더넷이 연결되고 전원이 켜졌는지 아래 목록에서 확인하십시오.\n"
 "(이미 등록된 라즈베리 파이는 목록에 나타나지 않습니다.)\n"
 "\n"
 "이 서버에서 사용하지 않으려는 라즈베리 파이는 체크해제하십시오.\n"
@@ -504,7 +504,7 @@ msgstr "비밀번호"
 
 #: ../data/adduserdialog.glade.h:10 ../data/firstuse.glade.h:62
 msgid "Force password change on first login"
-msgstr "처음 로그인할 때 비밀번호 변경 필수"
+msgstr "최초 로그인 시 비밀번호 변경 필수"
 
 #: ../data/firstuse.glade.h:3
 msgid "b8:27:eb:11:22:33"
@@ -544,9 +544,8 @@ msgid ""
 msgstr ""
 "<big>소개</big>\n"
 "\n"
-"파이서버(PiServer)를 사용해 이 컴퓨터를 중앙 서버로 설정하고 여러 라즈베리 파"
-"이를\n"
-"원격으로 부팅 제어할 수 있습니다.\n"
+"파이서버(PiServer)를 사용해 이 컴퓨터를 중앙 서버로 설정하고 여러\n"
+"라즈베리 파이를 원격으로 부팅할 수 있습니다.\n"
 "\n"
 "<big>요구 사항</big>\n"
 "\n"
@@ -585,7 +584,7 @@ msgstr ""
 "이 서버에서 사용할 라즈베리 파이를 선택합니다.\n"
 "\n"
 "사용하려는 모든 라즈베리 파이가 네트워크에서 부팅하도록\n"
-"설정됐는지 확인하십시오. 아래 목록에 나타납니다.\n"
+"설정됐는지 아래 목록에서 확인하십시오.\n"
 "\n"
 "이 서버에서 사용하지 않으려는 라즈베리 파이는 체크해제하십시오.\n"
 
